--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
   --animate-spotlight: spotlight 2s ease 0.75s 1 forwards;
   --animate-gradient: gradient 6s ease infinite alternate;
 
+  --color-gradient: var(--gradient);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
@@ -31,6 +32,7 @@
   --color-input: var(--input);
   --color-border: var(--border);
   --color-destructive: var(--destructive);
+  --color-destructive-foreground: var(--destructive-foreground);
   --color-accent-foreground: var(--accent-foreground);
   --color-accent: var(--accent);
   --color-muted-foreground: var(--muted-foreground);
@@ -192,7 +194,7 @@
 */
 @layer utilities {
   .bg-gradient {
-    background: var(--gradient);
+    background: var(--color-gradient);
   }
 
   /* Chrome, Safari and Opera */
